tests/ui/higher-ranked/higher-ranked-lifetime-error.stderr
error: higher-ranked subtype error
  --> $DIR/higher-ranked-lifetime-error.rs:12:5
   |
LL |     assert_all::<_, &String>(id);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

